--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "workspaces": [
     "packages/*"
   ],
+  "scripts": {
+    "start": "concurrently -n \"client,server\" -c \"bgBlue.bold,bgMagenta.bold\" \"yarn start:client\" \"yarn start:server\"",
+    "start:client": "cd packages/client && yarn start",
+    "start:server": "cd packages/server && yarn start"
+  },
   "devDependencies": {
     "lerna": "^4.0.0",
     "typescript": "^4.3.5"
